// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBoxTitle alert variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon pf-m-warning"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="m31.874 28.514-15.011-27a1.001 1.001 0 0 0-1.748 0l-15.011 27A1 1 0 0 0 .978 30H31a1 1 0 0 0 .874-1.486ZM14.5 12a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 26.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 26.001Z"
        />
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Warning alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box warning
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle custom icon variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M28 21c-1.103 0-2-.897-2-2v-4c0-4.884-3.523-8.955-8.159-9.823.405-.444.659-1.03.659-1.677C18.5 2.121 17.379 1 16 1s-2.5 1.121-2.5 2.5c0 .648.254 1.233.659 1.677C9.523 6.045 6 10.116 6 15v4c0 1.103-.897 2-2 2a1 1 0 0 0-1 1v3.5c0 .827.673 1.5 1.5 1.5H12c0 2.206 1.794 4 4 4s4-1.794 4-4h7.5c.827 0 1.5-.673 1.5-1.5V22a1 1 0 0 0-1-1ZM14.5 11a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 24.014a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 24.014Z"
        />
      </svg>
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box custom
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle custom variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon pf-m-custom"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M28.75 22v3.5c0 .689-.561 1.25-1.25 1.25h-7.521c.005.084.021.166.021.25 0 2.206-1.794 4-4 4s-4-1.794-4-4c0-.084.016-.166.021-.25H4.5c-.689 0-1.25-.561-1.25-1.25V22a.75.75 0 0 1 .75-.75c1.24 0 2.25-1.009 2.25-2.25v-4c0-4.826 3.528-8.833 8.138-9.605A2.482 2.482 0 0 1 13.5 3.5C13.5 2.122 14.621 1 16 1s2.5 1.122 2.5 2.5c0 .761-.349 1.436-.888 1.895 4.61.772 8.138 4.779 8.138 9.605v4c0 1.241 1.01 2.25 2.25 2.25a.75.75 0 0 1 .75.75Z"
        />
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Custom alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box custom
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle danger variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon pf-m-danger"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
        />
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Danger alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box danger
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle info variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon pf-m-info"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm1.5 22a1.5 1.5 0 1 1-3 0v-5.157l-.188.04a1.5 1.5 0 0 1-.625-2.934l1.956-.416c.112-.024.223-.032.333-.03l.024-.002a1.5 1.5 0 0 1 1.5 1.5v7Zm-.08-12.58c-.38.37-.89.58-1.42.58a1.998 1.998 0 0 1-1.851-2.76c.051-.13.11-.24.19-.35.07-.11.15-.21.25-.3.74-.75 2.08-.75 2.83 0 .09.09.17.19.24.3.08.11.14.22.189.35.05.12.09.24.11.37.03.13.04.26.04.39 0 .53-.21 1.04-.58 1.42Z"
        />
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Info alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box info
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle success variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon pf-m-success"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
        />
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Success alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box success
    </span>
  </h1>
</DocumentFragment>
`;
